[package]
name = "rsocket_rust_messaging"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Communicate with Spring RSocket Messaging."

[dependencies]
futures = "0.3"
bytes = "1.7"
serde = "1"
serde_json = "1"
serde_cbor = "0.11"
hex = "0.4"
url = "2.5"

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.7"

[dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.7"
