[package]
name = "rsocket_rust_test"
version = "0.0.0"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
publish = false

[dev-dependencies]
log = "0.4"
futures = "0.3"
env_logger = "0.11"
bytes = "1.7"
hex = "0.4"
rand = "0.8"
serde = "1"
serde_derive = "1"

[dev-dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dev-dependencies.rsocket_rust_transport_tcp]
path = "../rsocket-transport-tcp"
version = "0.7"

[dev-dependencies.rsocket_rust_transport_websocket]
path = "../rsocket-transport-websocket"
version = "0.7"

[dev-dependencies.rsocket_rust_messaging]
path = "../rsocket-messaging"
version = "0.7"

[dev-dependencies.tokio]
version = "1.40"
default-features = false
features = ["full"]

[dev-dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[dev-dependencies.anyhow]
version = "1"

[dev-dependencies.async-trait]
version = "0.1"

[dev-dependencies.serial_test]
version = "3.1"

[dev-dependencies.async-stream]
version = "0.3"
