[package]
name = "rsocket_rust_transport_wasm"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "WASM Websocket RSocket transport implementation."

[dependencies]
bytes = "1.7"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
futures-util = "0.3"
js-sys = "0.3"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  "FileReader",
  "ProgressEvent",
  "Blob",
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "Event",
]
