[package]
name = "rsocket_rust_transport_websocket"
version = "0.7.4"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsocket/rsocket-rust"
homepage = "https://github.com/rsocket/rsocket-rust"
description = "Websocket RSocket transport implementation."

[dependencies]
log = "0.4"
futures = "0.3"
bytes = "1.7"
url = "2.5"

[dependencies.tokio-tungstenite]
version = "0.23"
features = ["native-tls", "url"]

[dependencies.rsocket_rust]
path = "../rsocket"
version = "0.7"
features = ["frame"]

[dependencies.tokio]
version = "1.40"
default-features = false
features = [ "macros", "rt", "rt-multi-thread", "net", "sync"]
